@@ -25,6 +25,7 @@ Changelog
     - [Bugfix] Added a missing entry in the language files.
     - [Bugfix] Added missing translations for the setting.
     - [Bugfix] Made the feedback clearer when the Ext: resolver could not find a resolved file or directory.
+    - [Bugfix] Do not access debug class values before their initialization.
 
 5.0.1
     - [Feature] Updated to PHP 8.3
